# AI-Tools

./: .cc_kanban.json  .gitignore  README.md  cc_prompts.py  cc_utils.py  combineCopy.py  ftpapp.py  kanban_store.py  pyproject.toml  tui_apply.py  tui_confirm.py  tui_culling.py  tui_kanban.py  tui_prompt.py  tui_selection.py  vcs_tfs.py  web_server.py  webapp.py
combinecopy/: cli.py  prompts.py  utils.py
combinecopy/tui/: apply.py  consult.py  prompt.py  resolve.py  selection.py
combinecopy/web/: server.py
tools/ftp_applier/: ftpapp.py
tools/web_applier/: webapp.py
