[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tools"
version = "0.1.0"
description = "A repository of TUI utility tools that interact with AI models and local workspaces."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "textual",
    "keyboard",
    "pyperclip",
    "flask"
]

[project.scripts]
combineCopy = "combineCopy:main"
webapp = "webapp:main"
ftpapp = "ftpapp:main"
app = "combineCopy:app_main"

[tool.setuptools]
py-modules = [
    "cc_prompts",
    "cc_utils",
    "combineCopy",
    "ftpapp",
    "kanban_store",
    "tui_apply",
    "tui_confirm",
    "tui_culling",
    "tui_kanban",
    "tui_prompt",
    "tui_selection",
    "vcs_tfs",
    "webapp",
    "web_server"
]
